--- a/-02.011/App.xaml
+++ b/-02.011/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:_02._011"
-             StartupUri="MainWindow.xaml">
+             StartupUri="WINDOWS\MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
