--- a/-02.011/WINDOWS/Pages/PageAddTaskNote.xaml
+++ b/-02.011/WINDOWS/Pages/PageAddTaskNote.xaml
@@ -6,9 +6,34 @@
       xmlns:local="clr-namespace:_02._011.WINDOWS.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="PageAddTaskNote">
+      Title="PageAddTaskNote"
+      Loaded="Page_Loaded">
 
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Button Content="Save" Height="35" Width="120" Grid.Column="0" Grid.Row="3" Click="Button_Save"/>
+        <Button Content="Cancel" Height="35" Width="120" Grid.Column="1" Grid.Row="3" Click="Button_Cancel"/>
+
+        <TextBlock VerticalAlignment="Center" Text="Короткое название" Grid.Column="0" Grid.Row="0"/>
+        <TextBlock VerticalAlignment="Center" Text="Начало дата" Grid.Column="0" Grid.Row="1"/>
+        <TextBlock VerticalAlignment="Center" Text="Описание" Grid.Column="0" Grid.Row="2"/>
+        <TextBlock VerticalAlignment="Center" Text="Теги" Grid.Column="1" Grid.Row="0"/>
+        <TextBlock VerticalAlignment="Center" Text="тип" Grid.Column="1" Grid.Row="1"/>
+
+        <TextBox Grid.Row="0" Grid.Column="0" Width="180" Height="25" x:Name="Name"/>
+        <DatePicker Grid.Row="1" Grid.Column="0" Width="180" Height="25" x:Name="Data"/>
+        <TextBox Grid.Row="2" Grid.Column="0" Width="180" Height="25" x:Name="Descr"/>
+        <TextBox Grid.Row="0" Grid.Column="1" Width="180" Height="25" x:Name="tgs"/>
+        <ComboBox Grid.Row="1" Grid.Column="1" Width="180" Height="25" x:Name="Task_Note" SelectionChanged="Task_Note_SelectionChanged" DisplayMemberPath="Name"/>
+        <CheckBox Content="Complete" Grid.Row="2" Grid.Column="1" Width="180" Height="25" x:Name="Comp"/>
     </Grid>
 </Page>
