Revert rename button start "Начать" -> "заметки/задачи"

--- a/-02.011/WINDOWS/Pages/PageEntry.xaml
+++ b/-02.011/WINDOWS/Pages/PageEntry.xaml
@@ -10,7 +10,7 @@
 
     <Grid>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Button Content="Начать" Margin="-30,-15" Click="Button_MainMenu"/>
+            <Button Content="заметки/задачи" Margin="-60,-20" Click="Button_MainMenu"/>
         </StackPanel>
     </Grid>
 </Page>
